--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- estilos logo mini -->
-    <link rel="icon" href="https://raw.githubusercontent.com/H3RBASS/JaguarCRM/refs/heads/main/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/H3RBASS/JaguarCRM/blob/main/favicon/apple-touch-icon.png?raw=true">
+    <link rel="icon" href="https://raw.githubusercontent.com/H3RBASS/Nexo-MK-Page/refs/heads/main/favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/apple-touch-icon.png?raw=true">
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="nav-container">
-            <img src="https://github.com/H3RBASS/JaguarCRM/blob/main/favicon/web-app-manifest-192x192.png?raw=true" alt="JaguarCRM" class="logo">
-            
+            <img src="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/favicon-96x96.png?raw=true" alt="NexoMK-Logo" class="logo">
             <div class="menu-toggle" id="mobile-menu">
                 <span></span>
                 <span></span>
