--- a/prices.html
+++ b/prices.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexoMK - Precios</title>
+    <title>NexoMK</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="prices.css">
-    <link rel="icon" href="https://raw.githubusercontent.com/H3RBASS/JaguarCRM/refs/heads/main/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/H3RBASS/JaguarCRM/blob/main/favicon/apple-touch-icon.png?raw=true">
+    <!-- estilos logo mini -->
+    <link rel="icon" href="https://raw.githubusercontent.com/H3RBASS/Nexo-MK-Page/refs/heads/main/favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/apple-touch-icon.png?raw=true">
 </head>
 <body>
     <!-- Header -->
     <header>
         <div class="nav-container">
-            <a href="index.html"><img src="https://github.com/H3RBASS/JaguarCRM/blob/main/favicon/web-app-manifest-192x192.png?raw=true" alt="JaguarCRM" class="logo"></a>
+            <img src="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/favicon-96x96.png?raw=true" alt="NexoMK-Logo" class="logo">
             <nav class="nav-menu">
                 <a href="https://api.whatsapp.com/send/?phone=59178202929&text=Hola%2C+me+interesa+NexoMk&type=phone_number&app_absent=0" class="nav-link" target="_blank">Contacto</a>
                 <a href="https://app.jaguarcrm360.com/signup" class="btn btn-secondary">Prueba Gratis</a>
