--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- Header -->
     <header>
         <div class="nav-container">
-            <img src="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/favicon-96x96.png?raw=true" alt="NexoMK-Logo" class="logo">
+            <a href="index.html">
+                <img src="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/favicon-96x96.png?raw=true" alt="NexoMK-Logo" class="logo">
+            </a>
             <div class="menu-toggle" id="mobile-menu">
                 <span></span>
                 <span></span>
