--- a/prices.html
+++ b/prices.html
@@ -17,7 +17,9 @@
     <!-- Header -->
     <header>
         <div class="nav-container">
-            <img src="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/favicon-96x96.png?raw=true" alt="NexoMK-Logo" class="logo">
+            <a href="index.html">
+                <img src="https://github.com/H3RBASS/Nexo-MK-Page/blob/main/favicon/favicon-96x96.png?raw=true" alt="NexoMK-Logo" class="logo">
+            </a>
             <nav class="nav-menu">
                 <a href="https://api.whatsapp.com/send/?phone=59178202929&text=Hola%2C+me+interesa+NexoMk&type=phone_number&app_absent=0" class="nav-link" target="_blank">Contacto</a>
                 <a href="https://app.jaguarcrm360.com/signup" class="btn btn-secondary">Prueba Gratis</a>
