--- a/prices.html
+++ b/prices.html
@@ -145,7 +145,13 @@
             </div>
         </div>
     </section>
-
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="copyright">
+                <p>&copy; 2025 JaguarCRM. Todos los derechos reservados.</p>
+            </div>
+        </div>
+    </footer>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Precios base (solo mensuales, ya que no hay toggle anual/mensual)
